--- a/templates/itemsUser.html
+++ b/templates/itemsUser.html
@@ -169,7 +169,7 @@
 					<div class="modal-body">
 						<form method="POST" action="/item/{{item[1]}}/changePickupTime">
 							<div class="row p-2">
-								<label for="validationTooltip08">Preffered pickup time</label>
+								<label for="validationTooltip08">Preferred pickup time</label>
 								<select class="custom-select" id="validationTooltip08" name = "time" aria-describedby="timeHelp" required>
 									<option selected disabled value="">Choose...</option>
 									<option>Morning (8:00 AM - 11:00 AM)</option>
