--- a/templates/viewOrg.html
+++ b/templates/viewOrg.html
@@ -46,7 +46,6 @@
 </li>
 {% endblock %}
 
-    <!-- TODO: Add the organiation navbar -->
     {% block content %}
     <div class="jumbotron jumbotron-fluid bgColorSchemeRed colorSchemeWhite">
         <div class="container">
@@ -123,7 +122,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-right">
-                    <a href="/orgs" class="btn btn-primary">Back</a>
+                    <a onclick="window.history.back()" class="btn btn-primary">Back</a>
                 </div>
             </div>
         </div>
