--- a/templates/viewUser.html
+++ b/templates/viewUser.html
@@ -125,7 +125,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-right">
-                    <a href="/orgs" class="btn btn-primary">Back</a>
+                    <a onclick="window.history.back()" class="btn btn-primary">Back</a>
                 </div>
             </div>
         </div>
