--- a/templates/register.html
+++ b/templates/register.html
@@ -340,7 +340,7 @@
 		{% else %}
 		<div class="row align-items-center">
 			<div class="col">
-				<p class="text-center display-4">Choose Your Account Type</p>
+				<p class="text-center display-4">Registration: Choose Your Account Type</p>
 				<hr />
 			</div>
 		</div>
