--- a/templates/login.html
+++ b/templates/login.html
@@ -97,7 +97,7 @@
 	{% else %}
 	<div class="row align-items-center">
 		<div class="col">
-			<p class="text-center display-4">Choose Your Account Type</p>
+			<p class="text-center display-4">Login: Choose Your Account Type</p>
 			<hr />
 		</div>
 	</div>
