Added space...for eyes

--- a/templates/register.html
+++ b/templates/register.html
@@ -193,6 +193,8 @@
 			</form>
 		</div>
 	</div>
+	<div class="container pt-5 mb-5">
+	</div>
 
 <!--Card END-->
 	<!--Organization Form-->
@@ -337,6 +339,9 @@
 			</form>
 		</div>
 	</div>
+	<div class="container pt-5 mb-5">
+	</div>
+	
 		{% else %}
 		<div class="row align-items-center">
 			<div class="col">
